--- a/index.html
+++ b/index.html
@@ -150,110 +150,130 @@
 
 
 
-                  <div class="list-group" id="list-tab" role="tablist">
-                    <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
-                      href="#list-home" role="tab" aria-controls="home">臺北  <span
-                        class="badge badge-danger badge-pill">4</span></a>
-                    <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
-                      href="#list-profile" role="tab" aria-controls="profile">苗栗  <span
-                        class="badge badge-danger badge-pill">1</span></a>
-                    <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list"
-                      href="#list-messages" role="tab" aria-controls="messages">嘉義  <span
-                        class="badge badge-danger badge-pill">1</span></a>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="list-group" id="list-tab" role="tablist">
 
+                        <div class="accordion" id="accordionExample1">
+                          <div class="card">
+                            <div class="card-header" id="headingOne1">
+                              <h5 class="mb-0">
+                                <button class="btn btn-link" type="button" data-toggle="collapse"
+                                  data-target="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
+                                  北部
+                                </button>
+                              </h5>
+                            </div>
+
+                            <div id="collapseOne1" class="collapse show" aria-labelledby="headingOne1"
+                              data-parent="#accordionExample1">
+                              <div class="card-body">
+                                <button id="taipei" type="button" class="btn btn-outline-primary btn-block">臺北 <span
+                                    class="badge badge-danger badge-pill">4</span></button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="card-header" id="headingTwo1">
+                              <h5 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                  data-target="#collapseTwo1" aria-expanded="false" aria-controls="collapseTwo1">
+                                  中部
+                                </button>
+                              </h5>
+                            </div>
+                            <div id="collapseTwo1" class="collapse" aria-labelledby="headingTwo1"
+                              data-parent="#accordionExample1">
+                              <div class="card-body">
+                                <button id="miaoli" type="button" class="btn btn-outline-primary btn-block">苗栗 <span
+                                    class="badge badge-danger badge-pill">1</span></button>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="card">
+                            <div class="card-header" id="headingThree1">
+                              <h5 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                  data-target="#collapseThree1" aria-expanded="false" aria-controls="collapseThree1">
+                                  南部
+                                </button>
+                              </h5>
+                            </div>
+                            <div id="collapseThree1" class="collapse" aria-labelledby="headingThree1"
+                              data-parent="#accordionExample1">
+                              <div class="card-body">
+                                <button id="chiayi" type="button" class="btn btn-outline-primary btn-block">嘉義 <span
+                                    class="badge badge-danger badge-pill">1</span></button>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="card">
+                            <div class="card-header" id="headingFour1">
+                              <h5 class="mb-0">
+                                <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                  data-target="#collapseFour1" aria-expanded="false" aria-controls="collapseFour1">
+                                  東部
+                                </button>
+                              </h5>
+                            </div>
+                            <div id="collapseFour1" class="collapse" aria-labelledby="headingFour1"
+                              data-parent="#accordionExample1">
+                              <div class="card-body">
+
+                              </div>
+
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-8">
+                      <div class="card text-left">
+                        <div class="card-body">
+                          <i class="fa fa-home" aria-hidden="true"></i></i><p id="sleep"></p>
+                          <i class="fa fa-certificate" aria-hidden="true"></i></i><p id="eat"></p>
+                          <i class="fa fa-users" aria-hidden="true"></i></i></i><p id="play"></p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                  <div class="tab-content text-left" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="list-home" role="tabpanel"
-                      aria-labelledby="list-home-list">
-
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z">
-                          </path>
-                          <path fill-rule="evenodd"
-                            d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z">
-                          </path>
-                        </svg> 摩莎曼拉精品旅館-台北車站館/泊居旅店-二館</p>
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill"
-                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M4 0a2 2 0 0 0-2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4zm4.16 4.1a.178.178 0 0 0-.32 0l-.634 1.285a.178.178 0 0 1-.134.098l-1.42.206a.178.178 0 0 0-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 0 0 .258.187l1.27-.668a.178.178 0 0 1 .165 0l1.27.668a.178.178 0 0 0 .257-.187L9.368 7.15a.178.178 0 0 1 .05-.158l1.028-1.001a.178.178 0 0 0-.098-.303l-1.42-.206a.178.178 0 0 1-.134-.098L8.16 4.1z">
-                          </path>
-                        </svg> 寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園</p>
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-droplet-fill"
-                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6zM6.646 4.646c-.376.377-1.272 1.489-2.093 3.13l.894.448c.78-1.559 1.616-2.58 1.907-2.87l-.708-.708z">
-                          </path>
-                        </svg> 肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/臺北京站威秀影城/大河屋燒肉丼串燒-微風北車店</p>
-                    </div>
-
-
-
-                    <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z">
-                          </path>
-                          <path fill-rule="evenodd"
-                            d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z">
-                          </path>
-                        </svg> </p>
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill"
-                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M4 0a2 2 0 0 0-2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4zm4.16 4.1a.178.178 0 0 0-.32 0l-.634 1.285a.178.178 0 0 1-.134.098l-1.42.206a.178.178 0 0 0-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 0 0 .258.187l1.27-.668a.178.178 0 0 1 .165 0l1.27.668a.178.178 0 0 0 .257-.187L9.368 7.15a.178.178 0 0 1 .05-.158l1.028-1.001a.178.178 0 0 0-.098-.303l-1.42-.206a.178.178 0 0 1-.134-.098L8.16 4.1z">
-                          </path>
-                        </svg> 苗栗縣竹南鎮新南國民小學</p>
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-droplet-fill"
-                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6zM6.646 4.646c-.376.377-1.272 1.489-2.093 3.13l.894.448c.78-1.559 1.616-2.58 1.907-2.87l-.708-.708z">
-                          </path>
-                        </svg> 石二鍋</p>
-                    </div>
-
-
-
-
-                    <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z">
-                          </path>
-                          <path fill-rule="evenodd"
-                            d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z">
-                          </path>
-                        </svg> </p>
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark-star-fill"
-                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M4 0a2 2 0 0 0-2 2v13.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4zm4.16 4.1a.178.178 0 0 0-.32 0l-.634 1.285a.178.178 0 0 1-.134.098l-1.42.206a.178.178 0 0 0-.098.303L6.58 6.993c.042.041.061.1.051.158L6.39 8.565a.178.178 0 0 0 .258.187l1.27-.668a.178.178 0 0 1 .165 0l1.27.668a.178.178 0 0 0 .257-.187L9.368 7.15a.178.178 0 0 1 .05-.158l1.028-1.001a.178.178 0 0 0-.098-.303l-1.42-.206a.178.178 0 0 1-.134-.098L8.16 4.1z">
-                          </path>
-                        </svg> 森林之歌/嘉義公園/仁義潭水庫</p>
-                      <p><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-droplet-fill"
-                          fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd"
-                            d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6zM6.646 4.646c-.376.377-1.272 1.489-2.093 3.13l.894.448c.78-1.559 1.616-2.58 1.907-2.87l-.708-.708z">
-                          </path>
-                        </svg> 大同火雞肉飯</p>
-                    </div>
-
-
-                  </div>
-
-                  <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW&z=8"
-                    width="100%" height="1000"></iframe>
-
                 </div>
               </div>
+
+              <script>
+                var taipai_btn=document.getElementById("taipei")
+                var chiayi_btn=document.getElementById("chiayi")
+                var miaoli_btn=document.getElementById("miaoli")
+                var sleep=document.getElementById("sleep")
+                var eat=document.getElementById("eat")
+                var play=document.getElementById("play")
+                taipai_btn.onclick=function(){
+                  sleep.innerHTML="摩莎曼拉精品旅館-台北車站館/泊居旅店(二館)"
+                  eat.innerHTML="肉多多火鍋-古亭旗艦店/點點心微風-台北車站店/佐藤咖哩/大河屋燒肉丼串燒-微風北車店"
+                  play.innerHTML="寧夏夜市/紀州庵文學森林/茉莉二手書店-台大店/淡水河/臺北市兒童新樂園/臺北京站威秀影城"
+                }
+                chiayi_btn.onclick=function(){
+                  sleep.innerHTML=" "
+                  eat.innerHTML="大同火雞肉飯"
+                  play.innerHTML="森林之歌/嘉義公園/仁義潭水庫"
+                }
+                miaoli_btn.onclick=function(){
+                  sleep.innerHTML=" "
+                  eat.innerHTML="石二鍋"
+                  play.innerHTML="苗栗縣竹南鎮新南國民小學"
+                }
+              </script>
+              <iframe src="https://www.google.com/maps/d/embed?mid=1PfjoBAGkzZ8iTC4YPVz5QP26pSGsh-GN&hl=zh-TW&z=8"
+                width="100%" height="1000"></iframe>
+
             </div>
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
   </section>
 
