--- a/games/game02.html
+++ b/games/game02.html
@@ -9,14 +9,21 @@
 <body>
   <div class="w3-container">
     <ul class="w3-ul w3-card-4">
+
       <li class="w3-bar">
+        <img src="./images/g2_001.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
-          <img src="./images/g2_001.png" class="w3-bar-item w3-circle" style="width:85px">
-          <span class="w3-xlarge">北投溫泉會館</span><br>
-          <span><a href="https://www.booking.com/hotel/tw/ri-sheng-sheng-jia-he-wu-guo-ji-wen-quan-fan-dian.zh-tw.html?aid=805543;label=new-beitou-hot-spring-ms1pPNZfdKs2JiSgcR6VzAS393025792475%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666715%3Akwd-298307754951%3Alp1028790%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTptaWLFanNKcYTxELxeWjk;sid=ae12c2ad0c9ef0ad79e970d2b2c84659">連結</a></span>
+          <span class="w3-large">南投</span><br>
+          <span><a href="#">青井澤休閒旅店</a></span>
         </div>
       </li>
-  
+      <li class="w3-bar">
+        <img src="./images/g2_001.png" class="w3-bar-item" style="width:85px">
+        <div class="w3-bar-item">
+          <span class="w3-large">台北</span><br>
+          <span><a href="https://www.booking.com/hotel/tw/ri-sheng-sheng-jia-he-wu-guo-ji-wen-quan-fan-dian.zh-tw.html?aid=805543;label=new-beitou-hot-spring-ms1pPNZfdKs2JiSgcR6VzAS393025792475%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atiaud-297601666715%3Akwd-298307754951%3Alp1028790%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTptaWLFanNKcYTxELxeWjk;sid=ae12c2ad0c9ef0ad79e970d2b2c84659">北投溫泉會館</a></span>
+        </div>
+      </li>
     </ul>
   </div>
 </body>
