--- a/games/game02.html
+++ b/games/game02.html
@@ -14,7 +14,8 @@
         <img src="./images/g2_hotel.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
           <span class="w3-large">青井澤休閒旅店</span><br>
-          <span>南投</span>
+          <span>南投縣魚池鄉中興路12巷29號</span>
+          <span>04 92856896</span>
         </div>
         </a>
       </li>
@@ -22,59 +23,66 @@
         <img src="./images/g2_hotel.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
           <span class="w3-large">日勝生加賀屋國際溫泉飯店</span><br>
-          <span>台北北投</span>
+          <span>台北市北投區光明路236號</span>
+          <span>02 28911111</span>
         </div>
       </a>
       </li>
       <li class="w3-bar"><a href="https://www.zoo.gov.taipei/News_Content.aspx?n=0C91137A8B97AF0E&sms=F3B2EF982C0582B3&s=F78CCA83AAFC9E1C">
         <img src="./images/g2_zoo.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
-          <span class="w3-large">台北木柵動物園</span><br>
+          <span class="w3-large">木柵動物園</span><br>
+          <span>台北市文山區新光路二段30號</span>
+        </div>
+      </a>
+      </li>
+      <li class="w3-bar"><a href="https://tenjo.tw/dqtfood/">
+        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
+        <div class="w3-bar-item">
+          <span class="w3-large">大橋頭老牌筒仔米糕</span><br>
+          <span>台北市大同區延平北路三段41號</span>
+        </div>
+      </a>
+      </li>
+      <li class="w3-bar"><a href="https://joyaijia.pixnet.net/blog/post/329306439-%5B%E4%B8%AD%E6%AD%A3%E7%B4%80%E5%BF%B5%E5%A0%82%E7%BE%8E%E9%A3%9F%5D-%E9%87%91%E5%B3%B0%E9%AD%AF%E8%82%89%E9%A3%AF-%E5%8D%97%E9%96%80%E5%B8%82%E5%A0%B4%E6%8E%92%E9%9A%8A">
+        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
+        <div class="w3-bar-item">
+          <span class="w3-large">金峰滷肉飯</span><br>
+          <span>台北市中正區羅斯福路一段10號</span>
+        </div>
+        </a>
+      </li>
+      <li class="w3-bar"><a href="https://ivy2156.pixnet.net/blog/post/67829631-%E3%80%90%E6%96%B0%E5%8C%97%E4%B8%AD%E5%92%8C%E9%A3%9F%E8%A8%98%E3%80%91%E7%9E%87%E7%9E%87%E7%9C%BC%E3%80%82%E5%B7%B7%E5%BC%84%E5%85%A7%E7%9A%84%E8%94%AC%E9%A3%9F%E5%BE%88%E7%BE%8E">
+        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
+        <div class="w3-bar-item">
+          <span class="w3-large">瞇瞇眼蔬食</span><br>
           <span></span>
         </div>
       </a>
       </li>
-      <li class="w3-bar">
-        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
-        <div class="w3-bar-item">
-          <span class="w3-large">大橋頭老牌筒仔米糕</span><br>
-          <span><a href="https://tenjo.tw/dqtfood/">連結</a></span>
-        </div>
-      </li>
-      <li class="w3-bar">
-        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
-        <div class="w3-bar-item">
-          <span class="w3-large">金峰滷肉飯</span><br>
-          <span><a href="https://joyaijia.pixnet.net/blog/post/329306439-%5B%E4%B8%AD%E6%AD%A3%E7%B4%80%E5%BF%B5%E5%A0%82%E7%BE%8E%E9%A3%9F%5D-%E9%87%91%E5%B3%B0%E9%AD%AF%E8%82%89%E9%A3%AF-%E5%8D%97%E9%96%80%E5%B8%82%E5%A0%B4%E6%8E%92%E9%9A%8A">連結</a></span>
-        </div>
-      </li>
-      <li class="w3-bar">
-        <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
-        <div class="w3-bar-item">
-          <span class="w3-large">瞇瞇眼蘇食</span><br>
-          <span><a href="https://ivy2156.pixnet.net/blog/post/67829631-%E3%80%90%E6%96%B0%E5%8C%97%E4%B8%AD%E5%92%8C%E9%A3%9F%E8%A8%98%E3%80%91%E7%9E%87%E7%9E%87%E7%9C%BC%E3%80%82%E5%B7%B7%E5%BC%84%E5%85%A7%E7%9A%84%E8%94%AC%E9%A3%9F%E5%BE%88%E7%BE%8E">連結</a></span>
-        </div>
-      </li>
-      <li class="w3-bar">
+      <li class="w3-bar"><a href="https://www.eatogether.com.tw/">
         <img src="./images/g2_dinner.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
           <span class="w3-large">饗食天堂</span><br>
-          <span><a href="https://www.eatogether.com.tw/">連結</a></span>
+          <span></span>
         </div>
+        </a>
       </li>
-      <li class="w3-bar">
+      <li class="w3-bar"><a href="https://inparadise.com.tw/">
         <img src="./images/g2_dinner.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
           <span class="w3-large">INPARADISE 饗饗</span><br>
-          <span><a href="https://inparadise.com.tw/">連結</a></span>
+          <span></span>
         </div>
+        </a>
       </li>
-      <li class="w3-bar">
+      <li class="w3-bar"><a href="https://www.facebook.com/delisoys/">
         <img src="./images/g2_breakfast.png" class="w3-bar-item" style="width:85px">
         <div class="w3-bar-item">
           <span class="w3-large">上善豆家 DeliSoys</span><br>
-          <span><a href="https://www.facebook.com/delisoys/">連結</a></span>
+          <span>台北市大安區復興南路一段107巷16號</span>
         </div>
+        </a>
       </li>
     </ul>
   </div>
