--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid mx-auto d-block" src="img/portfolio/holding_blocks.png" alt="算命">
+            <img class="img-fluid mx-auto d-block" src="img/portfolio/holding_blocks.png" alt="擲茭">
           </a>
         </div>
       </div>
@@ -312,7 +312,7 @@
       <a class="close-button d-block portfolio-modal-dismiss" href="#">
         <i class="fa fa-3x fa-times"></i>
       </a>
-      <div class="container text-center">
+      <div class="text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">說走就走</h2>
@@ -329,7 +329,7 @@
       <a class="close-button d-block portfolio-modal-dismiss" href="#">
         <i class="fa fa-3x fa-times"></i>
       </a>
-      <div class="container text-center">
+      <div class="text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">記事本</h2>
@@ -346,7 +346,7 @@
       <a class="close-button d-block portfolio-modal-dismiss" href="#">
         <i class="fa fa-3x fa-times"></i>
       </a>
-      <div class="container text-center">
+      <div class="text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">賓果連線</h2>
@@ -363,7 +363,7 @@
       <a class="close-button d-block portfolio-modal-dismiss" href="#">
         <i class="fa fa-3x fa-times"></i>
       </a>
-      <div class="container text-center">
+      <div class="text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">就吃這個吧</h2>
@@ -380,7 +380,7 @@
       <a class="close-button d-block portfolio-modal-dismiss" href="#">
         <i class="fa fa-3x fa-times"></i>
       </a>
-      <div class="container text-center">
+      <div class="text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">擲硬幣</h2>
@@ -397,10 +397,10 @@
       <a class="close-button d-block portfolio-modal-dismiss" href="#">
         <i class="fa fa-3x fa-times"></i>
       </a>
-      <div class="container text-center">
+      <div class="text-center">
         <div class="row">
           <div class="col-lg-12 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">算命</h2>
+            <h2 class="text-secondary text-uppercase mb-0">擲茭</h2>
             <hr class="star-dark mb-5">
             <iframe src="games/game06.html" frameborder="0" style="width:100%" height="600px" width="100%"></iframe>
           </div>
